manifests/hidmo/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hidmo-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hidmo-web
  template:
    metadata:
      labels:
        app: hidmo-web
    spec:
      containers:
        - name: hidmo-web
          image: ivtheforth/hidmo-web:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "400m"
              memory: "512Mi"
            limits:
              cpu: "800m"
              memory: "1024Mi"
          volumeMounts:
            - name: env-js
              mountPath: /usr/share/nginx/html/env.js
              subPath: env.js
      volumes:
        - name: env-js
          emptyDir: {}
