manifests/hidmo/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hidmo-web
spec:
  selector:
    app: hidmo-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
